--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -3,3 +3,24 @@
     margin: 0;
 }
 
+header{
+    display: flex;
+    height: 200px;
+    justify-content: space-between;
+
+}
+header h1, header nav, #log{
+    width: 30%;
+}
+nav ul{
+    display: flex;
+    justify-content: space-between;
+}
+nav ul li{
+    align-items: center;
+    list-style-type: none;
+}
+header #log{
+    text-align: right;
+    
+}
