--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -2,11 +2,15 @@
     padding: 0;
     margin: 0;
 }
-
+/*header */
 header{
     display: flex;
-    height: 200px;
+    height: 100px;
     justify-content: space-between;
+    padding: 20px;
+    background-color: royalblue;
+    text-align: center;
+    align-items: center;
 
 }
 header h1, header nav, #log{
@@ -17,10 +21,34 @@ nav ul{
     justify-content: space-between;
 }
 nav ul li{
-    align-items: center;
     list-style-type: none;
+    padding: 10px;
+    border-radius: 10px;
+}
+nav ul li:hover{
+    background-color: blanchedalmond;
+}
+nav ul li a{
+    align-items: center;
+    text-decoration: none;
+    color: black;
 }
 header #log{
     text-align: right;
     
 }
+/* connect page*/
+h1{
+    text-align: center;
+}
+form{
+    display: inline-block;
+    width: 100%;
+    height: 400px;
+    
+}
+form div{
+    text-align: center;
+    margin: 20px;
+}
+
